--- a/2021-10-7-文献/reference.bib
+++ b/2021-10-7-文献/reference.bib
@@ -9,7 +9,6 @@
   pages      = {1182--1195},
   volume     = {58},
   file       = {:F\:/研究生学习书籍/2007_Sparse MRI_The application of compressed sensing for rapid MR imaging(1).pdf:PDF;:F\:/研究生学习书籍/2007_Sparse MRI_The application of compressed sensing for rapid MR imaging(1).pdf:PDF},
-  keywords   = {read},
   publisher  = {Wiley Online Library},
   readstatus = {read},
 }
@@ -398,5 +397,120 @@ abstract = {Sparse sampling and parallel imaging techniques are two effective ap
   pages={152--167},
   year={2021},
   publisher={Wiley Online Library}
+}@article{yang2017dagan,
+  title={DAGAN: Deep de-aliasing generative adversarial networks for fast compressed sensing MRI reconstruction},
+  author={Yang, Guang and Yu, Simiao and Dong, Hao and Slabaugh, Greg and Dragotti, Pier Luigi and Ye, Xujiong and Liu, Fangde and Arridge, Simon and Keegan, Jennifer and Guo, Yike and others},
+  journal={IEEE transactions on medical imaging},
+  volume={37},
+  number={6},
+  pages={1310--1321},
+  year={2017},
+  publisher={IEEE}
+}@inproceedings{yang2016deep,
+  title={Deep ADMM-Net for compressive sensing MRI},
+  author={Yang, Yan and Sun, Jian and Li, Huibin and Xu, Zongben},
+  booktitle={Proceedings of the 30th international conference on neural information processing systems},
+  pages={10--18},
+  year={2016}
+}
+@article{wang2017learning,
+  title={Learning joint-sparse codes for calibration-free parallel MR imaging},
+  author={Wang, Shanshan and Tan, Sha and Gao, Yuan and Liu, Qiegen and Ying, Leslie and Xiao, Taohui and Liu, Yuanyuan and Liu, Xin and Zheng, Hairong and Liang, Dong},
+  journal={IEEE transactions on medical imaging},
+  volume={37},
+  number={1},
+  pages={251--261},
+  year={2017},
+  publisher={IEEE}
+}
+@article{cheng2018improved,
+  title={Improved parallel image reconstruction using feature refinement},
+  author={Cheng, Jing and Jia, Sen and Ying, Leslie and Liu, Yuanyuan and Wang, Shanshan and Zhu, Yanjie and Li, Ye and Zou, Chao and Liu, Xin and Liang, Dong},
+  journal={Magnetic resonance in medicine},
+  volume={80},
+  number={1},
+  pages={211--223},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+@article{blaimer2009virtual,
+  title={Virtual coil concept for improved parallel MRI employing conjugate symmetric signals},
+  author={Blaimer, Martin and Gutberlet, Marcel and Kellman, Peter and Breuer, Felix A and K{\"o}stler, Herbert and Griswold, Mark A},
+  journal={Magnetic Resonance in Medicine: An Official Journal of the International Society for Magnetic Resonance in Medicine},
+  volume={61},
+  number={1},
+  pages={93--102},
+  year={2009},
+  publisher={Wiley Online Library}
+}@article{holme2019enlive,
+  title={ENLIVE: an efficient nonlinear method for calibrationless and robust parallel imaging},
+  author={Holme, H Christian M and Rosenzweig, Sebastian and Ong, Frank and Wilke, Robin N and Lustig, Michael and Uecker, Martin},
+  journal={Scientific reports},
+  volume={9},
+  number={1},
+  pages={1--13},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+@article{ravishankar2010mr,
+  title={MR image reconstruction from highly undersampled k-space data by dictionary learning},
+  author={Ravishankar, Saiprasad and Bresler, Yoram},
+  journal={IEEE transactions on medical imaging},
+  volume={30},
+  number={5},
+  pages={1028--1041},
+  year={2010},
+  publisher={IEEE}
+}@article{chen2020new,
+  title={A new sparse representation framework for compressed sensing MRI},
+  author={Chen, Zhen and Huang, Chuanping and Lin, Shufu},
+  journal={Knowledge-Based Systems},
+  volume={188},
+  pages={104969},
+  year={2020},
+  publisher={Elsevier}
+}
+@INPROCEEDINGS {9157643,
+author = {A. Sriram and J. Zbontar and T. Murrell and C. Zitnick and A. Defazio and D. K. Sodickson},
+booktitle = {2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+title = {GrappaNet: Combining Parallel Imaging With Deep Learning for Multi-Coil MRI Reconstruction},
+year = {2020},
+volume = {},
+issn = {},
+pages = {14303-14310},
+keywords = {image reconstruction;coils;magnetic resonance imaging;acceleration;mathematical model;machine learning},
+doi = {10.1109/CVPR42600.2020.01432},
+url = {https://doi.ieeecomputersociety.org/10.1109/CVPR42600.2020.01432},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+month = {jun}
+}
+@article{Mehmet2019Scan,
+  title={Scan‐specific robust artificial‐neural‐networks for k‐space interpolation (RAKI) reconstruction: Database‐free deep learning for fast imaging},
+  author={Mehmet Akçakaya and  Moeller, Steen  and Sebastian Weingärtner and Kâmil Uğurbil},
+  journal={Magnetic Resonance in Medicine},
+  volume={81},
+  year={2019},
+}@article{WANG2020136,
+title = {DeepcomplexMRI: Exploiting deep residual network for fast parallel MR imaging with complex convolution},
+journal = {Magnetic Resonance Imaging},
+volume = {68},
+pages = {136-147},
+year = {2020},
+issn = {0730-725X},
+doi = {https://doi.org/10.1016/j.mri.2020.02.002},
+url = {https://www.sciencedirect.com/science/article/pii/S0730725X19305338},
+author = {Shanshan Wang and Huitao Cheng and Leslie Ying and Taohui Xiao and Ziwen Ke and Hairong Zheng and Dong Liang},
+keywords = {Deep learning, Convolutional neural network, Fast MR imaging, Prior knowledge, Parallel imaging},
+abstract = {This paper proposes a multi-channel image reconstruction method, named DeepcomplexMRI, to accelerate parallel MR imaging with residual complex convolutional neural network. Different from most existing works which rely on the utilization of the coil sensitivities or prior information of predefined transforms, DeepcomplexMRI takes advantage of the availability of a large number of existing multi-channel groudtruth images and uses them as target data to train the deep residual convolutional neural network offline. In particular, a complex convolutional network is proposed to take into account the correlation between the real and imaginary parts of MR images. In addition, the k-space data consistency is further enforced repeatedly in between layers of the network. The evaluations on in vivo datasets show that the proposed method has the capability to recover the desired multi-channel images. Its comparison with state-of-the-art methods also demonstrates that the proposed method can reconstruct the desired MR images more accurately.}
+}@article{qu2014magnetic,
+  title={Magnetic resonance image reconstruction from undersampled measurements using a patch-based nonlocal operator},
+  author={Qu, Xiaobo and Hou, Yingkun and Lam, Fan and Guo, Di and Zhong, Jianhui and Chen, Zhong},
+  journal={Medical image analysis},
+  volume={18},
+  number={6},
+  pages={843--856},
+  year={2014},
+  publisher={Elsevier}
 }
 @Comment{jabref-meta: databaseType:bibtex;}
