--- a/2021-5-4/reference.bib
+++ b/2021-5-4/reference.bib
@@ -293,4 +293,17 @@ abstract = {Sparse sampling and parallel imaging techniques are two effective ap
   year={2012},
   publisher={Wiley Online Library}
 }
+@article{ZHANG2020101687,
+title = {Image reconstruction with low-rankness and self-consistency of k-space data in parallel MRI},
+journal = {Medical Image Analysis},
+volume = {63},
+pages = {101687},
+year = {2020},
+issn = {1361-8415},
+doi = {https://doi.org/10.1016/j.media.2020.101687},
+url = {https://www.sciencedirect.com/science/article/pii/S1361841520300530},
+author = {Xinlin Zhang and Di Guo and Yiman Huang and Ying Chen and Liansheng Wang and Feng Huang and Qin Xu and Xiaobo Qu},
+keywords = {Parallel imaging, Image reconstruction, Low-rank, Structured Hankel matrix, SPIRiT},
+abstract = {Parallel magnetic resonance imaging has served as an effective and widely adopted technique for accelerating data collection. The advent of sparse sampling offers aggressive acceleration, allowing flexible sampling and better reconstruction. Nevertheless, faithfully reconstructing the image from limited data still poses a challenging task. Recent low-rank reconstruction methods are superior in providing high-quality images. Nevertheless, none of them employ the routinely acquired calibration data to improve image quality in parallel magnetic resonance imaging. In this work, an image reconstruction approach named STDLR-SPIRiT is proposed to explore the simultaneous two-directional low-rankness (STDLR) in the k-space data and to mine the data correlation from multiple receiver coils with the iterative self-consistent parallel imaging reconstruction (SPIRiT). The reconstruction problem is then solved with a singular value decomposition-free numerical algorithm. Experimental results of phantom and brain imaging data show that the proposed method outperforms the state-of-the-art methods in terms of suppressing artifacts and achieving the lowest error. Moreover, the proposed method exhibits robust reconstruction even when the auto-calibration signals are limited in parallel imaging. Overall the proposed method can be exploited to achieve better image quality for accelerated parallel magnetic resonance imaging.}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
