modify IP in Server.py

--- a/2021-10-7-文献/literature-review.tex
+++ b/2021-10-7-文献/literature-review.tex
@@ -104,7 +104,7 @@
 
 \par CS-MRI或CS-SENSE模型对目标图像进行稀疏变换，对变换得到稀疏系数使用$l_0$范数进行约束，但是求解$l_0$范数是NP难问题，因此将$l_0$范数转化为其最优凸近似$l_1$范数，最后使用非线性算法进行求解。CS-MRI或者CS-SENSE模型中，常使用离散小波(Wavelet)，紧框架(Framelet)等进行稀疏变换。因为紧框架系统存在冗余性，可以较好地对目标图像进行稀疏表示，同时其也具有良好的计算性质，例如正交Haar紧框架则拥有完美重构的性质，因此众多研究者常使用具有冗余性质的紧框架对图像进行稀疏变换。如Li等人提出一种基于二维正交Haar小波的紧框架系统，称为DHF\cite{li2016adaptive}，可用于检测图像水平，垂直和$\pm 45^{\circ}$方向上的边缘特征，并提出了相应的求解算法。Liu等人也基于紧框架系统，开发了投影迭代软阈值算法(pISTA)\cite{7448403}和其加速版本pFISTA，但是该作者没有证明其收敛准则，而且其现有的单线圈收敛准则也不适用于并行成像版本，因此Zhang等人\cite{ZHANG2021101987}基于Liu的工作基础，分析了pFISTA应用于并行成像的收敛性、提供应用于SENSE时的最优参数。
 \par CS-SENSE在求解pMRI问题时体现了其优越性，但是基本上不可能保证完全恢复，文\cite{chun2015efficient}中提出一种联合稀疏的pMRI重建模型JS-CS-SENSE，进一步提升CS-SENSE模型的稀疏性，JS-CS-SENSE重建模型同时使用小波正则化和全变差正则化，能够更加有效的提取先验信息，同时也更好的克服了采样系统和稀疏化之间的相互一致性障碍，联合稀疏的重建模型能够较好解决CS-SENSE模型的缺点，但是也提升了计算的复杂性。在文\cite{wang2017learning}提出无校准(calibration-free)的联合稀疏编码算法，该方法不需要ACS数据，利用联合稀疏正则化的方法挖掘潜在的灵敏度信息，将pMRI问题描述为一个$l_2-l_F-l_{2,1}$最优化问题，使用F范数约束稀疏表示的误差，$l_{2,1}$混合范数用于触发联合稀疏性。文\cite{cheng2018improved}使用一种特征细化的方法，利用特征描述符提取有用的信息，结合CS-pMRI技术，从而能够更好的保留图像细节，并且提出一种新的特征描述技术，由纹理描述符(texture descriptor, TD)和结构描述符(structure descritor, SD)组成，最后使用三种CS-pMRI重建算法测试该特征描述的有效性。文章\cite{qiu2021highly}中提出了一种新的重建框架，其利用虚拟共轭线圈(Virtual conjugate coil, VCC)\cite{blaimer2009virtual}和wave编码技术，用以改善重建质量。虚拟线圈是由真实物理线圈的共轭信号产生的，能够提供额外的编码能力，并且还能改善pMRI编码矩阵的病态情况。
-\par 在文章\cite{ravishankar2010mr}提出了一种不同于小波变换，全变差等的稀疏表示方法，可以自适应的学习稀疏变换，称作字典学习(Dictionary Learning, DL)。字典学习着重于图像的局部结构，用以增强图像的局部稀疏性，但是通过挖掘图像局部信息所带来的是高昂的计算成本。在\cite{chen2020new}一文中，作者使用双紧框架提取稀疏变换，将MRI图像分为光滑和非光滑部分，对两个部分施加不同的正则化MRI。其针对光滑部分采用较为通用的$l_{1}$正则化，而为了保留非光滑部分的边缘结构和细节纹理等，提出基于紧框架的曲线波$l_{1,a}$正则化方法，并且提供了自适应求解参数$a$的算法。同样地，文\cite{qu2014magnetic}中提出一种基于patch的非局部算子，并且使用一个传统
+\par 在文章\cite{ravishankar2010mr}提出了一种不同于小波变换、全变差等的稀疏表示方法，可以自适应的学习稀疏变换，称为字典学习(Dictionary Learning, DL)。字典学习着重于图像的局部结构，用以增强图像的局部稀疏性，但是通过挖掘图像局部信息所带来的是高昂的计算成本。在\cite{chen2020new}一文中，作者使用双紧框架提取稀疏变换，将MRI图像分为光滑和非光滑部分，对两个部分施加不同的正则化MRI。其针对光滑部分采用较为通用的$l_{1}$正则化，而为了保留非光滑部分的边缘结构和细节纹理等，提出基于紧框架的曲线波$l_{1,a}$正则化方法，并且提供了自适应求解参数$a$的算法。同样地，由于CS-MRI获取图像特征的局限性，文\cite{qu2014magnetic}中提出一种基于patch的非局部算子(PANO)，该算法首先通过欧式距离计算patch之间的相似性，然后将相似的patch堆叠成3D结构，进行通过3D Haar小波进行提取特征。但是，该文算法最主要的缺点就是使用欧式距离进行衡量patch之间的相似性，因为通过该度量方式得到的patch，它们之间的很有可能不存在结构相似性，而仅仅只是像素值上的接近。
 
 \subsection{基于频率域($k$-空间)的重建方法}
 \par 基于$k$-空间的重建方法与图像域方法的主要区别为，不需要明确知道线圈灵敏度信息，其信息隐含在$k$-空间数据中。Generalized autocalibrating partially parallel acquisitions(GRAPPA)\cite{griswold2002generalized}是较为著名的频率域重建算法，其将pMRI重建问题视作一个缺失值填充问题，挖掘$k$-空间存在的数据冗余性。GRAPPA较为重要的一步就是从$k$-空间中心一块全采样的数据(Auto Calibraion Signal，ACS)中估计得到插值核，然后使用插值核和缺失点周围的已获取数据进行线性组合，从而估计出缺失值。但是GRAPPA重建质量不佳，因此Lustig等人基于GRAPPA的思想，提出了SPIRiT\cite{lustig2010spirit}算法，其主要使用了与GRAPPA中类似的方法计算出插值核，然后将问题构建为一个$k$-空间中对数据填充的逆问题，并且使用小波正则化对问题进行约束，纳入图像的先验知识进一步提升重建图像质量，提出了$l_1$-SPIRiT。随着SENSE类方法和GRAPPA方法的研究深入，一些学者也开始研究SENSE和GRAPPA两者之间的联系， Uecker\cite{uecker2014espirit}等人将GRAPPA和SENSE相结合，将其解约束在子空间中，对Calibration矩阵进行SVD分解，将分解结果的右奇异矩阵的特征向量作为灵敏度信息，提出'soft'SENSE模型，也基于CS-MRI的思想，对目标图像使用小波分解提取先验信息，将分解系数用$l_1$范数进行约束。但是，ESPIRiT方法仍未考虑灵敏度的相位信息，估计得到的灵敏度仍不够精确，在\cite{uecker2017estimating}一文中，将ESPIRiT算法应用于物理和虚拟线圈数据中，提出了VCC-ESPIRiT，该算法利用了$k$-空间数据的共轭对称性，通过计算得到了含有图像绝对相位的线圈灵敏度信息，进一步提升了图像重建质量。文\cite{holme2019enlive}也受到了ESPIRiT的启发，提出了EVLIVE(Extended NonLinear InVersion inspired by ESPIRiT)，该算法不需要ACS数据，并且使用非线性算法联合估计图像和相对应的线圈灵敏度，作者将联合估计问题推导为一个矩阵核范数最小化问题，并且解释了EVLIVE具有的低秩性质，最后通过实验表明EVLIVE对噪声和数据具有的鲁棒性。
@@ -119,10 +119,10 @@
 	\caption{The GRAPPANet model}
 	\label{GRAPPANet}
 \end{figure}
-\par 文\cite{WANG2020136}提出一种基于深度残余网络的多线圈并行成像重建算法(DeepcomplexMRI)，该算法无需依赖于线圈灵敏度和图像的先验知识，使用复卷积网络对MRI数据的实部和虚部分别训练，并且在训练过程中施加$k$-空间数据一致性约束。
+文\cite{WANG2020136}提出一种基于深度残余网络的多线圈并行成像重建算法(DeepcomplexMRI)，该算法无需依赖于线圈灵敏度和图像的先验知识，使用复卷积网络对MRI数据的实部和虚部分别训练，并且在训练过程中施加$k$-空间数据一致性约束。
 
 
-\par 但是，从目前来说，基于深度学习的方法仍未得到广泛应用，最主要的原因数据难以获取，而且训练得到的模型泛化能力不够强，当数据之间差异较大时，模型的重建结果质量较差，同时图像重建质量也容易到MRI设备参数的影响。
+\par 但是从目前来说，基于深度学习的方法仍未得到广泛应用，最主要的原因数据难以获取，而且训练得到的模型泛化能力不够强，当数据之间差异较大时，模型的重建结果质量较差，同时图像重建质量也容易到MRI设备参数的影响。
 
 
 \newpage
