--- a/2021-10-7-文献/reference.bib
+++ b/2021-10-7-文献/reference.bib
@@ -513,4 +513,48 @@ abstract = {This paper proposes a multi-channel image reconstruction method, nam
   year={2014},
   publisher={Elsevier}
 }
+@article{ravishankar2010mr,
+  title={MR image reconstruction from highly undersampled k-space data by dictionary learning},
+  author={Ravishankar, Saiprasad and Bresler, Yoram},
+  journal={IEEE transactions on medical imaging},
+  volume={30},
+  number={5},
+  pages={1028--1041},
+  year={2010},
+  publisher={IEEE}
+}
+@article{hammernik2018learning,
+  title={Learning a variational network for reconstruction of accelerated MRI data},
+  author={Hammernik, Kerstin and Klatzer, Teresa and Kobler, Erich and Recht, Michael P and Sodickson, Daniel K and Pock, Thomas and Knoll, Florian},
+  journal={Magnetic resonance in medicine},
+  volume={79},
+  number={6},
+  pages={3055--3071},
+  year={2018},
+  publisher={Wiley Online Library}
+}@article{LU2020106790,
+title = {pFISTA-SENSE-ResNet for parallel MRI reconstruction},
+journal = {Journal of Magnetic Resonance},
+volume = {318},
+pages = {106790},
+year = {2020},
+issn = {1090-7807},
+doi = {https://doi.org/10.1016/j.jmr.2020.106790},
+url = {https://www.sciencedirect.com/science/article/pii/S1090780720301087},
+author = {Tieyuan Lu and Xinlin Zhang and Yihui Huang and Di Guo and Feng Huang and Qin Xu and Yuhan Hu and Lin Ou-Yang and Jianzhong Lin and Zhiping Yan and Xiaobo Qu},
+keywords = {Magnetic resonance imaging, Image reconstruction, Deep learning, Sparse learning, Network interpretability},
+abstract = {Magnetic resonance imaging has been widely applied in clinical diagnosis. However, it is limited by its long data acquisition time. Although the imaging can be accelerated by sparse sampling and parallel imaging, achieving promising reconstructed images with a fast computation speed remains a challenge. Recently, deep learning methods have attracted a lot of attention for encouraging reconstruction results, but they are lack of proper interpretability for neural networks. In this work, in order to enable high-quality image reconstruction for the parallel magnetic resonance imaging, we design the network structure from the perspective of sparse iterative reconstruction and enhance it with the residual structure. Experimental results on a public knee dataset indicate that, as compared with the state-of-the-art deep learning-based and optimization-based methods, the proposed network achieves lower error in reconstruction and is more robust under different samplings.}
+}
+@article{LI2021332,
+title = {Regularization with multilevel non-stationary tight framelets for image restoration},
+journal = {Applied and Computational Harmonic Analysis},
+volume = {53},
+pages = {332-348},
+year = {2021},
+issn = {1063-5203},
+doi = {https://doi.org/10.1016/j.acha.2021.03.003},
+url = {https://www.sciencedirect.com/science/article/pii/S1063520321000221},
+author = {Yan-Ran Li and Raymond H.F. Chan and Lixin Shen and Xiaosheng Zhuang},
+abstract = {Variational regularization models are one of the popular and efficient approaches for image restoration. The regularization functional in the model carries prior knowledge about the image to be restored. The prior knowledge, in particular for natural images, are the first-order (i.e. variance in luminance) and second-order (i.e. contrast and texture) information. In this paper, we propose a model for image restoration, using a multilevel non-stationary tight framelet system that can capture the image's first-order and second-order information. We develop an algorithm to solve the proposed model and the numerical experiments show that the model is effective and efficient as compared to other higher-order models.}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
